--- a/mi-portafolio/src/app/globals.css
+++ b/mi-portafolio/src/app/globals.css
@@ -1,19 +1,407 @@
 :root {
-  --red:#b30000;
-  --red-black:#7d0000;
-  --yellow:#b3b300;
-  --green-black:#7d7d00;
-  --blue:#002db3;
-  --black:#000000;
-  --background:#a7a4a4;
+  --primary-background: #7d0000;
+  --secondary-background: #b30000;
+  --primary-clear: #F1F2F4;
+  --secondary-clear: #efffff;
+  --white: #FFFFFF;
+  --yellow: #b3b300;
   --xs: 14px;
   --sm: 22px;
   --md: 24px;
   --lg: 46px;
+}
 
+body {
+  margin: 0;
+  padding: 0;
+  background-color: var(--primary-background);
+  font-family: Poppins;
+}
+
+.main {
+  padding: 20px;
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.profile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.profile h1 {
+  font-size: var(--lg);
+  color: var(--primary-clear);
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.profile p {
+  font-size: var(--md);
+  color: var(--secondary-clear);
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.profile-img {
+  width: 215px;
+  height: 215px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--white);
+  border-color: var(--yellow);
+  border-width: 5px;
+  border-style: solid;
+}
+
+.profile-img img {
+  border-radius: 50%;
+  width: 205px;
+  height: 205px;
+  object-fit: contain;
+}
+
+.profile-social {
+  display: inline-flex;
+  align-items: flex-start;
+  gap: 26px;
+}
+
+.profile-social-img {
+  width: 36px;
+  height: 36px;
+  background-color: var(--yellow);
+  border-radius: 5px;
+  padding: 2px;
+}
+
+.profile-social-img:hover {
+  transform: scale3d(1.2, 1.2, 1);
+  transition: 300ms all;
+}
+
+.modal-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.856); 
+  z-index: 999; 
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  background-color: var(--yellow);
+  z-index: 1000;
+}
+
+
+
+
+.facts {
+  display: flex;
+  padding: 20px 2px;
+  justify-content: center;
+  align-items: center;
+  gap: 90px;
+}
+
+.fact-item {
+  display: flex;
+  width: 148px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.fact-item h2 {
+  color: var(--secondary-clear);
+  font-size: var(--md);
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-align: center;
+}
+
+.fact-item p {
+  color: var(--secondary-clear);
+  font-size: var(--sm);
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-align: center;
+}
+
+.buttons {
+  display: flex;
+  height: 80px;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 38px;
+}
+
+.btn-primary {
+  width: 290px;
+  height: 80px;
+  border-radius: 10px;
+  background: var(--yellow);
+}
+
+.btn-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.btn-primary .btn-content p {
+  color: var(--primary-background);
+  font-size: var(--sm);
+  font-weight: 500;
+  line-height: normal;
 
 }
-body{
-  background-color: var(--blue);
-  color: var(--background);
+
+.btn-secondary {
+  width: 290px;
+  height: 80px;
+  border-radius: 10px;
+  background: var(--secondary-background);
+  text-decoration: none;
+
+}
+
+.btn-secondary .btn-content p {
+  color: var(--secondary-clear);
+  font-size: var(--sm);
+  font-weight: 500;
+  line-height: normal;
+
+}
+
+.tabs {
+  margin: 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  background: var(--secondary-background);
+  gap: 50px;
+}
+
+.tabs-background-item {
+  border: none;
+  border-radius: 10px;
+  margin: 24px;
+  width: 300px;
+  height: 80px;
+  background: var(--secondary-background);
+}
+
+.tabs-background-item.active {
+  border-radius: 10px;
+  background: var(--primary-background);
+
+}
+
+.tabs-background-item p {
+  color: var(--secondary-clear);
+  font-size: var(--sm);
+  font-weight: 500;
+  line-height: normal;
+  text-align: center;
+}
+
+.project-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  row-gap: 32px;
+  column-gap: 32px;
+  border-radius: 20px;
+  justify-items: center;
+}
+
+.content-card-img {
+  width: 362px;
+  height: 226px;
+  border-radius: 15px;
+  overflow: hidden;
+  background-size: contain;
+  position: relative;
+}
+
+.content-card-img .image {
+  width: 110%;
+  height: 110%;
+  object-fit: cover;
+  object-position: center center;
+}
+
+.content-card-img .image.grayscale {
+  filter: grayscale(100%);
+}
+
+.content-card-img .content-card-img-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--secondary-background);
+  opacity: 0;
+}
+
+.content-card-img .content-card-img-overlay:hover {
+  opacity: 0.7;
+}
+
+.content-card-img-detail {
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+}
+
+.content-card-img .content-card-img-overlay:hover+.content-card-img-detail {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.content-card-img-detail .title {
+  text-align: center;
+  font-family: Poppins;
+  font-size: var(--sm);
+}
+
+.content-card-img-detail .detail {
+  text-align: center;
+  font-family: Poppins;
+  font-size: var(--xs);
+}
+
+.content-card-img-detail .btn {
+  width: 38px;
+  height: 38px;
+  fill: var(--primary-clear);
+  border-radius: 50%;
+  border: 0px;
+}
+
+/* --- Responsive ---  */
+@media(max-width: 768px) {
+  .profile {
+      flex-direction: column;
+      align-items: center;
+  }
+
+  .profile-info {
+      text-align: center;
+  }
+
+  .profile h1 {
+      font-size: var(--md);
+  }
+
+  .profile p {
+      font-size: var(--xs);
+  }
+
+  .profile-img {
+      width: 128px;
+      height: 128px;
+  }
+
+  .profile-img img {
+      width: 120px;
+      height: 120px;
+  }
+
+  .facts {
+      gap: 20px;
+  }
+
+  .fact-item {
+      width: 115px;
+  }
+
+  .fact-item h2 {
+      font-size: var(--xs);
+  }
+
+  .fact-item p {
+      font-size: var(--xs);
+  }
+
+  .buttons {
+      height: 50px;
+      gap: 10px;
+  }
+
+  .btn-primary {
+      width: 190px;
+      height: 50px;
+  }
+
+  .btn-primary-img {
+      width: 15px;
+      height: 15px;
+  }
+
+  .btn-content {
+      gap: 10px;
+
+  }
+
+  .btn-primary .btn-content p {
+      font-size: var(--xs);
+      font-weight: 300;
+  }
+
+  .btn-secondary {
+      width: 190px;
+      height: 50px;
+  }
+
+  .btn-secondary .btn-content p {
+      font-size: var(--xs);
+      font-weight: 300;
+  }
+
+  .tabs {
+      margin: 15px;
+      gap: 10px;
+  }
+
+  .tabs-background-item {
+      margin: 10px;
+      width: 150px;
+      height: 50px;
+  }
+
+  .tabs-background-item p {
+      font-size: var(--xs);
+      font-weight: 300;
+  }
+
+  .project-container {
+      grid-template-columns: 1fr;
+  }
 }
