--- a/mi-portafolio/src/app/page.module.css
+++ b/mi-portafolio/src/app/page.module.css
@@ -3,8 +3,10 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  
+  padding: 6rem;
+  min-height: 100vh;
 }
+
 .description {
   display: inherit;
   justify-content: inherit;
@@ -40,8 +42,8 @@
 .grid {
   display: grid;
   grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
+  max-width: var(--max-width);
+  width: 100%;
 }
 
 .card {
@@ -68,7 +70,6 @@
   font-size: 0.9rem;
   line-height: 1.5;
   max-width: 30ch;
-  text-wrap: balance;
 }
 
 .center {
